Initial implementation with challange tokens and expire singing.